<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_serial_task_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_serial_1" />

    <Button
        android:id="@+id/button_serial_task_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_serial_2" />

    <Button
        android:id="@+id/button_serial_task_3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_serial_3" />

</LinearLayout>
