<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_no_ui_task"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_no_ui_callback" />

    <Button
        android:id="@+id/button_progress_task"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_progress_dialog" />

    <Button
        android:id="@+id/button_retain_ui_state_task"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_retain_ui_state" />

</LinearLayout>
